Feature DASH-233, by Michel Settembrino: One time login feature adapted to be able to provide a login for super-admin or user_administrator but as of today, only super-admin one time login link is returned.

--- a/nexteuropa_dashboard_agent.routing.yml
+++ b/nexteuropa_dashboard_agent.routing.yml
@@ -6,7 +6,7 @@ nexteuropa_dashboard_agent.status_page:
     _custom_access: '\Drupal\nexteuropa_dashboard_agent\Controller\NextEuropaDashboardController::access'
 
 nexteuropa_dashboard_agent.user_login:
-  path: '/admin/reports/user-login'
+  path: '/admin/reports/user-login/{ne_dashboard_agent_req_for_user}'
   defaults:
     _controller: '\Drupal\nexteuropa_dashboard_agent\Controller\NextEuropaDashboardController::uli'
   requirements:
