--- a/nexteuropa_dashboard_agent.routing.yml
+++ b/nexteuropa_dashboard_agent.routing.yml
@@ -2,6 +2,8 @@ nexteuropa_dashboard_agent.status_page:
   path: '/admin/reports/nexteuropa-dashboard'
   defaults:
     _controller: '\Drupal\nexteuropa_dashboard_agent\Controller\NextEuropaDashboardController::load'
+  options:
+    no_cache: TRUE
   requirements:
     _custom_access: '\Drupal\nexteuropa_dashboard_agent\Controller\NextEuropaDashboardController::access'
 
@@ -9,6 +11,8 @@ nexteuropa_dashboard_agent.user_login:
   path: '/admin/reports/user-login/{ne_dashboard_agent_req_for_user}'
   defaults:
     _controller: '\Drupal\nexteuropa_dashboard_agent\Controller\NextEuropaDashboardController::uli'
+  options:
+    no_cache: TRUE
   requirements:
     _custom_access: '\Drupal\nexteuropa_dashboard_agent\Controller\NextEuropaDashboardController::access'
 
