--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "sensiolabs/security-checker": "^5.0",
         "phpmd/phpmd": "^2.8",
         "phpro/grumphp": "^0.14.3",
-        "squizlabs/php_codesniffer": "^3.5"
+        "ec-europa/qa-automation": "^3.1.0",
+        "squizlabs/php_codesniffer": "2.9.2"
     }
 }
