--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "ec-europa/qa-automation": "^4.2",
         "jakub-onderka/php-parallel-lint": "^v1.0",
         "phpro/grumphp": "^v0.14",
-        "sensiolabs/security-checker": "^v6.0",
-        "squizlabs/php_codesniffer": "~3.5"
+        "sensiolabs/security-checker": "^v5.0",
+        "squizlabs/php_codesniffer": "^3.5"
     },
     "repositories": [
         {
