--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ec-europa/qa-automation": "4.0.*",
         "jakub-onderka/php-parallel-lint": "^v1.0",
         "phpro/grumphp": "v0.14.*",
+        "openeuropa/code-review": "^1.0",
         "sensiolabs/security-checker": "^v5.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
